Preliminary Design complete

--- a/03_Systems_Engineering/03001_Concept_Development.tex
+++ b/03_Systems_Engineering/03001_Concept_Development.tex
@@ -27,6 +27,7 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	%NASA SYSTEM REQUIREMENTS
 	\FloatBarrier
 	\begin{table}[h]
+	\footnotesize
 	\centering
 	\begin{tabular}{ | m{38em} | } 
  	\hline
@@ -59,7 +60,7 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	%VUR SYSTEM REQUIREMENTS
 	\FloatBarrier
 	\begin{table}[h]
-	\small
+	\footnotesize
 	\centering
 	\begin{tabular}{ | m{38em} | } 
  	\hline
