--- a/2017-2018 SE Paper.tex
+++ b/2017-2018 SE Paper.tex
@@ -16,11 +16,10 @@
 \usepackage{graphics}
 \usepackage{placeins}
 \usepackage{adjustbox}
-<<<<<<< HEAD
-=======
 \usepackage{array}
 \usepackage{makecell}
->>>>>>> magic-table
+\usepackage{graphicx}
+\usepackage{sidecap}
 % END HEADER
 
 
