--- a/00_Preamble/frr_preamble.sty
+++ b/00_Preamble/frr_preamble.sty
@@ -29,6 +29,7 @@
 \usepackage[raggedright]{titlesec}
 \usepackage{diagbox}
 \usepackage{import}
+\usepackage{wrapfig}
 
 
 \usepackage[norule,hang]{footmisc} %footnotes
