Added list of team members to title page

--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -10,54 +10,87 @@
 \setlength{\parindent}{0cm}
 \newcommand{\HRule}{\rule{\linewidth}{0.25mm}}
 
-\vspace*{2in}
+\vspace*{0.5in}
 \centering{
 \huge\textsc{{Vanderbilt University}} \\
 
 \vspace*{0.125in}
 
-\large \textsc{ 2301 Vanderbilt Pl Nashville, TN 37235}
+\large \textsc{2301 Vanderbilt Pl Nashville, TN 37235}
 }
 
-\vspace*{.75in}
+\vspace*{.125in}
 
 \HRule \\[0.4cm]
-\centering{
+%\centering{
 	\Large\textsc{Vanderbilt University Robotics \\ Systems Engineering Report}
 
 \HRule\\ [1.0cm]
 
-\vspace*{0.1in}
+\vspace*{0.0in}
 \huge\textsc{NASA Robotic Mining Competition}
 
 \vspace*{0.125in}
 
 \LARGE{\textsc{2017 - 2018}}
 
-\vspace*{0.5in}
+\vspace*{0.2in}
 
 \large{\textsc{April 10, 2018}}
 
-\vspace*{0.3in}
+\vspace*{0.1in}
 
 \begin{center}
 \rule{4.5in}{0.4pt}
 \end{center}
 \begin{center}
-Dr. Nabil Simaan: Faculty Advisor
+Dr. Nabil Simaan: Faculty Advisor \\
 \end{center}
+
+\vspace*{0.2in}
+%\textbf{\underline{Executive Members:}}
+
+\centering
+\footnotesize{
+ \begin{tabular}{r l r l}
+  \textbf{Lin Liu ---} & President  &  \textbf{Danny Levy ---} & Vice President \\
+  \textbf{Swapnil Pande ---} & Team Captain  & \textbf{Alexander Barnett ---} & Public Relations Chair \\
+  \textbf{Alade Malik ---} & Secretary & \textbf{Jeffanie Wu ---} & Treasurer \\
+  \textbf{Jacob Fine ---} & Design Team Lead & \textbf{Joshua Petrin ---} & Electrical Team Lead \\
+  \textbf{Joseph Holliday ---} & Programming Team Lead & &
+ \end{tabular}
+}
+
+\vspace*{0.2in}
+
+\centering
+\footnotesize{
+ \begin{tabular}{l l l}
+  \textbf{Design Team:}&  \textbf{Electrical Team:} & \textbf{Programming Team:} \\
+  Alexander Stephens   &  Daniel Dong      &  Arjun Keerthi  \\
+  Kimberly Majumder    &  Joshua Berger    &  Kevin Zhai     \\
+  Samantha Majumder    &  Lawrence Kwok    &  Zhanwhen Chen  \\
+  Stephanie Schroth    &  Minh Vu          &                 \\
+  Brian Rider          &  Robert Saskowski &                 \\
+  Diandry  Rutayisire  &  Rodman Zhu       &                 \\
+  Emmet Hayden         &  Tristan Irvin    &                 \\
+ \end{tabular}
+}
+
+\vspace*{0.3in}
 
 \begin{tikzpicture}[remember picture,overlay]
    \node[anchor=north east,inner sep=0pt] at (current page.north east)
-              {\includegraphics[scale=1.0]{09_Figures/NASA}};
+              {\includegraphics[scale=0.7]{09_Figures/NASA}};
 \end{tikzpicture}
 
 \begin{tikzpicture}[remember picture,overlay]
    \node[anchor=south west,inner sep=0pt] at (current page.south west)
-              {\includegraphics[scale=1.4]{09_Figures/VUlogo3}};
+              {\includegraphics[scale=0.9]{09_Figures/VUlogo3}};
 \end{tikzpicture}
-}
 
-	\end{titlepage}
+%}
+
+\end{titlepage}
 
 \end{document}
