Added images and reformatted file structure

--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -51,7 +51,7 @@ Dr. Nabil Simaan: Faculty Advisor \\
 %\textbf{\underline{Executive Members:}}
 
 \centering
-\footnotesize{
+\small{
  \begin{tabular}{r l r l}
   \textbf{Lin Liu ---} & President  &  \textbf{Danny Levy ---} & Vice President \\
   \textbf{Swapnil Pande ---} & Team Captain  & \textbf{Alexander Barnett ---} & Public Relations Chair \\
