Changes to Project Mangement Section

--- a/03_Systems_Engineering/03004_Project_Management.tex
+++ b/03_Systems_Engineering/03004_Project_Management.tex
@@ -16,18 +16,34 @@
 	\label{subsec:project_management}
 	
 	\subsubsection{Work Schedule}
+	The team built a GANTT chart in order to track the timeline and managing deadlines for the robot design. The timeline was regularly reviewed and re-evaluated based on the progress and updated goals based on design changes. The GANTT chart is present in Appendix XX Figure XX.
+
 	
 	\subsubsection{Cost Budget}
 	
+	The Vanderbilt Robotics team received support from several financial sponsors this year: Vanderbilt School of Engineering, SDP/SI, Torc Robotics, Misumi, and Advanced Motion Controls. An account was established in the Vanderbilt Mechanical Engineering department to manage parts ordering. A Piggybackr crowd-sourced fundraiser account was also established to raise money from the public. The Treasurer and Public Relations Chair on the executive board were responsible for purchasing project components with the team’s financial adviser and managing the budget and the bill of materials. 
+	
+	An overview of the financial budget can be seen in Table XX. The estimated costs for the excavation, depositing, and frame and drive systems were not much less than the actual costs. The power distribution and control electronics ended up being significantly more expensive than expected, since the team did not own any electrical components at the beginning of the year. A separate travel budget was created for the competition trip. 
+	
+	\FloatBarrier
+	\begin{table}[h]
+	\scriptsize
+	\centering
+	\begin{tabular}{ | r | c | c | c | c | c | }
+ 	\hline		
+ 	\rowcolor[gray]{0.8}
+ 		\textbf{Subsystem} & \textbf{Excavation} & \textbf{Depositing} & \textbf{Frame} & \textbf{Power Distribution \& Control Electronics} & \textbf{Total} \\
+ 		\hline\hline
+ 		\textbf{Estimated Cost} & \$1,000.00 & \$500.00 & \$2,184.00 & \$800.00 &  \$4,484.01 \\
+	\hline
+		\textbf{Estimated Cost} & \$1,662.43 & \$716.67 & \$2,618.22 & \$2,033.22 & \$7,029.54 \\
+	\hline
+	\end{tabular}
+	\caption{Trade Study Matrix for Digging Mechanism}
+		\label{table:cost_budget}
+	\end{table}
+	\FloatBarrier
+	
 	\subsubsection{Management Structure}
 	Team members were distributed among three subgroups, mechanical, electrical, and programming, based on their area of interest and expertise. Members of each subteam were assigned to specific subsystems of the robot and worked in cross-disciplinary groups with other members from each subteam to fully design the subsystem. The purpose of the cross-functional groups was to ensure that all aspects of the design are considered simultaneously. Each of the subteams were managed by a subteam lead, whose responsibility was to allocate work and track progress for the design of their respective part of the robot. The subteam leads reported their progress to the team captain. The captain was responsible for tracking objectives, facilitating integration between various subteams, and ensuring that the high-level requirements are met.
-
-
-
-	
-	
-	
-
-
-	
 \end{document}
