--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -12,10 +12,32 @@
 % END HEADER
 
 \begin{document}
-	\subsection{Project Management}
-	\label{subsec:project_management}
+	\subsection{Final Design}
+	\label{subsec:final-design}
 	
-	\subsubsection{Work Schedule}
+	After the preliminary design was completed, several design iterations were made as the CAD assembly was further developed and specific parts were selected. The changes were made to resolve sizing issues, to reduce fabrication time, and to reduce system cost. The final CAD assembly of the robot is presented in Figure \ref{fig:final-cad}.
+	
+	\FloatBarrier
+	\begin{figure}[h]
+	\centering
+	 \includegraphics[width=0.6\linewidth]{09_Figures/final-cad.jpg}
+	 \caption{Robot Controller flow diagram}
+	 \label{fig:final-cad}
+	\end{figure}
+	\FloatBarrier
+	
+	\subsubsection{Frame Section}
+	
+	The frame was designed to be lightweight and simple to modify (Fig. 7). It was constructed from 30mm by 30mm aluminum extrusions connected by corner brackets and flat mounting plates. Two vertical supports near the back connect the conveyor. The motor and gearbox that drive the conveyor were placed on the back extrusion. Only minor length changes were made to the frame between the preliminary design review and the final design. The final weight was under 4 kg.
+	
+	\FloatBarrier
+	\begin{figure}[h]
+	\centering
+	 \includegraphics[width=0.6\linewidth]{09_Figures/frame-cad.jpg}
+	 \caption{Robot Controller flow diagram}
+	 \label{fig:final-cad}
+	\end{figure}
+	\FloatBarrier
 	
 	\subsubsection{Cost Budget}
 	
