--- a/03_Systems_Engineering/03004_Project_Management.tex
+++ b/03_Systems_Engineering/03004_Project_Management.tex
@@ -23,7 +23,7 @@
 	
 	The Vanderbilt Robotics team received support from several financial sponsors this year: Vanderbilt School of Engineering, SDP/SI, Torc Robotics, Misumi, and Advanced Motion Controls. An account was established in the Vanderbilt Mechanical Engineering department to manage parts ordering. A Piggybackr crowd-sourced fundraiser account was also established to raise money from the public. The Treasurer and Public Relations Chair on the executive board were responsible for purchasing project components with the team’s financial adviser and managing the budget and the bill of materials. 
 	
-	An overview of the financial budget can be seen in Table XX. The estimated costs for the excavation, depositing, and frame and drive systems were not much less than the actual costs. The power distribution and control electronics ended up being significantly more expensive than expected, since the team did not own any electrical components at the beginning of the year. A separate travel budget was created for the competition trip. 
+	An overview of the financial budget can be seen in Table \ref{table:cost_budget}. The estimated costs for the excavation, depositing, and frame and drive systems were not much less than the actual costs. The power distribution and control electronics ended up being significantly more expensive than expected, since the team did not own any electrical components at the beginning of the year. A separate travel budget was created for the competition trip. 
 	
 	\FloatBarrier
 	\begin{table}[h]
@@ -36,10 +36,10 @@
  		\hline\hline
  		\textbf{Estimated Cost} & \$1,000.00 & \$500.00 & \$2,184.00 & \$800.00 &  \$4,484.01 \\
 	\hline
-		\textbf{Estimated Cost} & \$1,662.43 & \$716.67 & \$2,618.22 & \$2,033.22 & \$7,029.54 \\
+		\textbf{Actual Cost} & \$1,662.43 & \$716.67 & \$2,618.22 & \$2,033.22 & \$7,029.54 \\
 	\hline
 	\end{tabular}
-	\caption{Trade Study Matrix for Digging Mechanism}
+	\caption{Cost Budget Allocation Summary}
 		\label{table:cost_budget}
 	\end{table}
 	\FloatBarrier
