--- a/04_Conclusions/04000_Conclusions.tex
+++ b/04_Conclusions/04000_Conclusions.tex
@@ -14,6 +14,10 @@
 
 \begin{document}
 	\section{Conclusions}
-		By applying the systems engineering process, Vanderbilt Robotics has developed a robotic excavation system to collect icy gravel simulant in a Martian environment. With the experience and prototype developed this year, the team expects to continue to optimize the design of this robot to maximize other factors such as power and mass efficiency.
+		The Vanderbilt Robotics Team has used a systems engineering approach to design an autonomous Mars excavation rover for the 2018 NASA RMC. The rover design seeks to find an elegant solution to the complex challenge of natural resource mining on Mars. The team was motivated to tackle this challenge to help develop the autonomous space robotics field, as it is essential to the future of interplanetary travel. 
+		
+		
+The final robot design had many strong points, such as its ease of assembly and custom fabricated systems. With the experience and prototype developed this year, the team will continue to optimize the robot design to maximize factors such as weight, power efficiency, and autonomy in future years.
+
 
 \end{document}
