--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -15,7 +15,7 @@
 	\subsection{Final Design}
 	\label{subsec:final-design}
 	
-	After the preliminary design was completed, several design iterations were made as the CAD assembly was further developed and specific parts were selected. The changes were made to resolve sizing issues, to reduce fabrication time, and to reduce system cost. The final CAD assembly of the robot is presented in Figure \ref{fig:final-cad}.
+	After the preliminary design was completed, several design iterations were made as the CAD assembly was further developed and specific parts were selected. Changes were made to resolve size constraint issues, reduce fabrication time, and reduce system cost. The final CAD assembly of the robot is presented in Figure \ref{fig:final-cad}.
 	
 	\FloatBarrier
 	\begin{figure}[h]
