Updated Tech Management

--- a/03_Systems_Engineering/03006_Technical_Management.tex
+++ b/03_Systems_Engineering/03006_Technical_Management.tex
@@ -15,4 +15,54 @@
 	\subsection{Technical Management}
 	\label{subsec:technical_management}
 	
+	\subsubsection{Energy and Mass Budget}
+	In order to ensure that all of the subsystems were considered and shared resources equally, power and mass were budgeted between the systems prior to conceptualization. The energy and mass budgets are presented in Tables \ref{table:mass_budget} and \ref{table:energy_budget}, respectively.
+	
+\FloatBarrier
+	\begin{table}[h]
+	\scriptsize
+	\parbox{.45\linewidth}{
+	\centering
+	\begin{tabular}{ | r | c | }
+ 	\hline		
+ 	\rowcolor[gray]{0.8}
+ 		\textbf{Subsystem} & \textbf{Estimated Weight (kg)} \\
+ 		\hline\hline
+ 		\textbf{Excavation} & 30 \\
+ 		\hline
+ 		\textbf{Depositing} & 26 \\
+ 		\hline
+ 		\textbf{Frame} & 12 \\
+ 		\hline
+ 		\textbf{Total} & 68 \\
+ 		\hline
+	\end{tabular}
+	\caption{Mass Budget Summary}
+		\label{table:mass_budget}
+	}
+	\hfill
+	\parbox{.45\linewidth}{
+	\centering
+	\begin{tabular}{ | r | c | }
+ 	\hline		
+ 	\rowcolor[gray]{0.8}
+ 		\textbf{Subsystem} & \textbf{Estimated Energy Usage (Ah)} \\
+ 		\hline\hline
+ 		\textbf{Excavation} & 6.6 \\
+ 		\hline
+ 		\textbf{Depositing} & 2 \\
+ 		\hline
+ 		\textbf{Frame} & 18.7 \\
+ 		\hline
+ 		\textbf{Other} & 18.7 \\
+ 		\hline
+ 		\textbf{Total} & 29.7 \\
+ 		\hline
+	\end{tabular}
+	\caption{Energy Budget Summary}
+		\label{table:energy_budget}
+	}
+	\end{table}
+	\FloatBarrier
+	
 \end{document}
