--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -28,11 +28,7 @@
 	
 	\subsubsection{Frame Section}
 	
-<<<<<<< HEAD
 	The frame was designed to be lightweight and simple to modify (Figure \ref{fig:frame-cad}). It was constructed from 30mm by 30mm aluminum extrusions connected by corner brackets and flat mounting plates. Two vertical supports near the back connect the conveyor. The motor and gearbox that drive the conveyor were placed on the back extrusion. Only minor length changes were made to the frame between the preliminary design review and the final design. The final weight was under 4 kg.
-=======
-	The frame was designed to be lightweight and simple to modify (Fig. 7). It was constructed from 30mm by 30mm aluminum extrusions connected by corner brackets and flat mounting plates. Two vertical supports near the back connect the conveyor. The motor and gearbox that drive the conveyor were placed on the back extrusion. Only minor length changes were made to the frame between the preliminary design review and the final design. The final weight, excluding the wheels, was under 4 kg.
->>>>>>> 78a240ce2f48d44d712c7fba2ab129acb4495ae5
 	
 	The wheel diameter was reduced to 7.875 inches since the rover was above the RMC height limit with the previous 30 cm diameter. The units were switched from metric to U.S. customary to aid in machining. The motor mount height was also decreased to lower the robot height.
 
@@ -43,35 +39,41 @@
 	
 	\begin{figure}
 	\centering
-	\begin{minipage}{.5\textwidth}
+	\begin{minipage}{.49\textwidth}
 	  \centering
-	  \includegraphics[width=.4\linewidth]{09_Figures/frame-cad.jpg}
+	  \includegraphics[width=.9\linewidth]{09_Figures/frame-cad.jpg}
 	  \captionof{figure}{Final CAD Frame Assembly}
 	  \label{fig:frame-cad}
 	\end{minipage}
-	\begin{minipage}{.5\textwidth}
+	\begin{minipage}{.49\textwidth}
 	  \centering
-	  \includegraphics[width=.4\linewidth]{09_Figures/wheel-cad.jpg}
+	  \includegraphics[width=.9\linewidth]{09_Figures/wheel-cad.jpg}
 	  \captionof{figure}{Final Wheel Assembly}
 	  \label{fig:wheel-cad}
 	\end{minipage}
 	\end{figure}
 	
 	
-%	\begin{wrapfigure}{l}{0.4\textwidth}
-%	\centering
-%	 \includegraphics[width=0.4\linewidth]{09_Figures/frame-cad.jpg}
-%	 \caption{Final CAD Frame Assembly}
-%	 \label{fig:frame-cad}
-%	\end{wrapfigure}
-%	
-%	\begin{wrapfigure}{r}{0.4\textwidth}
-%	\centering
-%	 \includegraphics[width=0.4\textwidth]{09_Figures/wheel-cad.jpg}
-%	 \caption{Final }
-%	 \label{fig:wheel-cad}
-%	\end{wrapfigure}
+	\subsubsection{Excavation System}
 	
+	The auger must travel from its initial position to ground level during operation. The carriage, shown in Figure \ref{fig:carriage-cad}, supports the excavation system and contains the motor and gearbox that drive the auger. 
+	
+	A 2.2 horsepower motor and \#40 ANSI roller chain are used to drive the auger.  A flanged bushing and ball bearing support the auger from radial and thrust loads. Polycarbonate sheets cover the top and bottom of the carriage to protect the auger drive system from dust.
+	
+	The primary factors when selecting the auger were mass, digging length, power consumption, and ease of assembly. A 34 in. auger with a 4 in. radius was determined to travel deep enough to mine the icy gravel. 
+	
+	\begin{wrapfigure}{l}{0.5\textwidth}
+	\centering
+	 \includegraphics[width=0.4\textwidth]{09_Figures/fan-cad.jpg}
+	 \caption{The Final Fan Assembly}
+	 \label{fig:fan-cad}
+	\end{wrapfigure}
+	
+	A PVC pipe was fitted to the auger to aid in regolith and gravel acquisition. The upward helical spiral on the auger funnels the gravel into the PVC pipe and can then be deposited into the collection bin. The tube is 8 in. long and has a 4.75 in. inner diameter and 5 in. outer diameter. 
+	
+	Due to size constraints, the auger must start the match constricted near the conveyor. Once the match begins, two linear actuators push the auger to its final angle of $75^\circ$ from the horizontal. A final angle of $60^{\circ}$ was desired, but it was not possible to fit an auger with the correct digging length at $60^\circ$ and fit within the RMC size constraints. The linear actuators and guide rails support the carriage as the auger travels to ground level. A lead screw driven by a motor provides the linear motion. The carriage and guide rails are attached directly to the frame.
+	
+	The fan is a system (Figure \ref{fig:fan-cad}) made of laser cut polycarbonate sheets that spreads out the icy regolith as it falls into the depositing system. This allows the material to be deposited evenly on the conveyor. Without the fan, the material would pile up in the center of the conveyor. 
 	
 	
 	\subsubsection{Cost Budget}
