--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -76,10 +76,12 @@
 	The fan is a system (Figure \ref{fig:fan-cad}) made of laser cut polycarbonate sheets that spreads out the icy regolith as it falls into the depositing system. This allows the material to be deposited evenly on the conveyor. Without the fan, the material would pile up in the center of the conveyor. 
 	
 	
-	\subsubsection{Cost Budget}
+	\subsubsection{Depositing}
 	
-	\subsubsection{Management Structure}
-	Team members were distributed among three subgroups, mechanical, electrical, and programming, based on their area of interest and expertise. Members of each subteam were assigned to specific subsystems of the robot and worked in cross-disciplinary groups with other members from each subteam to fully design the subsystem. The purpose of the cross-functional groups was to ensure that all aspects of the design are considered simultaneously. Each of the subteams were managed by a subteam lead, whose responsibility was to allocate work and track progress for the design of their respective part of the robot. The subteam leads reported their progress to the team captain. The captain was responsible for tracking objectives, facilitating integration between various subteams, and ensuring that the high-level requirements are met.
+	The gravel depositing system consists of a conveyor belt with standard \#40 ANSI roller chains and sprockets (Fig. XX). It was determined that three supports were needed along the 4 feet conveyor belt to prevent roller chain deflection. A hollow rod was used for the middle support to reduce weight. Tensioners were attached at the bottom of each roller chain to allow for variable tension in case the roller chain deflected under heavy gravel loads. Flanged bushings were chosen to support the radial load on the rods since they were easy to assemble. The conveyor is driven from the back rod by a roller chain that runs to the frame and is connected to a motor and gearbox. The drive shaft is keyed to couple the two roller chains together and prevent misalignment. 
+	
+	A nylon mesh was chosen as the conveyor belt so that BP-1 could be filtered out and no excess weight would be carried. The mesh is not shown in the CAD because it would be too computationally intensive to render.
+
 
 
 
