--- a/03_Systems_Engineering/03004_Project_Management.tex
+++ b/03_Systems_Engineering/03004_Project_Management.tex
@@ -15,9 +15,11 @@
 	\subsection{Project Management}
 	\label{subsec:project_management}
 	
+	\subsubsection{Management Structure}
+	Team members were distributed among three subgroups, mechanical, electrical, and programming, based on their area of interest and expertise. Members of each subteam were assigned to specific subsystems of the robot and worked in cross-disciplinary groups with other members from each subteam to fully design the subsystem. The purpose of the cross-functional groups was to ensure that all aspects of the design are considered simultaneously. Each of the subteams were managed by a subteam lead, whose responsibility was to allocate work and track progress for the design of their respective part of the robot. The subteam leads reported their progress to the team captain. The captain was responsible for tracking objectives, facilitating integration between various subteams, and ensuring that the high-level requirements are met.
+	
 	\subsubsection{Work Schedule}
 	The team built a GANTT chart in order to track the timeline and managing deadlines for the robot design. The timeline was regularly reviewed and re-evaluated based on the progress and updated goals based on design changes. The GANTT chart is present in Appendix XX Figure XX.
-
 	
 	\subsubsection{Cost Budget}
 	
