Finished with Final Design

--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -73,7 +73,7 @@ Dr. Nabil Simaan: Faculty Advisor \\
   Stephanie Schroth    &  Minh Vu          &                 \\
   Brian Rider          &  Robert Saskowski &                 \\
   Diandry  Rutayisire  &  Rodman Zhu       &                 \\
-  Emmet Hayden         &  Tristan Irvin    &                 \\
+  Emmet Haden          &  Tristan Irvin    &                 \\
  \end{tabular}
 }
 
