--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -168,6 +168,12 @@
 	
 	
 	
+	\subsection{Critical Design Review}
+	
+	On March 5, 2018, the Vanderbilt Robotics executive board met with the team’s faculty adviser for a final design review. The CAD assembly of each subsystem was analyzed for its functionality and potential failure points. The team was cleared to move on to the fabrication and assembly phase and to begin purchasing parts. 
+	
+	
+	
 
 
 	
