--- a/03_Systems_Engineering/03003_Final_Design.tex
+++ b/03_Systems_Engineering/03003_Final_Design.tex
@@ -147,7 +147,7 @@
 	\begin{figure}[h]
 	\centering
 	 \includegraphics[width=1\linewidth]{09_Figures/power-distribution.jpg}
-	 \caption{The broad-view scope of the robot’s power distribution scheme. This figure is adapted from a general wiring guide for team members, so it includes some niche specifications, such as the emergency button wiring scheme and the busbar and breaker configurations.}
+	 \caption{The broad-scope view of the robot’s power distribution scheme. This figure is adapted from a general wiring guide for team members, so it includes some niche specifications, such as the emergency button wiring scheme and the busbar and breaker configurations.}
 	 \label{fig:power-dist}
 	\end{figure}
 	\FloatBarrier
